[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Jonas Lieber <jns.lieber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { features = ["macros"], version = "0.2" }
dotenv = "0.15.0"

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.songbird]
features = ["builtin-queue"]
git = "https://github.com/serenity-rs/songbird"
branch = "current"
